--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,7 @@
 /* Base */
 
 html {
-  /* 62,5% of 16px = 10px */
-  font-size: 62.5%;
+  font-size: 10px;
 }
 
 ul {
@@ -123,15 +122,32 @@ body {
     display: initial;
   }
 }
-
 @media screen and (max-width: 320px) {
   /* Utility breakpoints */
-  .hide-320 {
+  /* .hide-320 {
     display: none;
+  } */
+  /* img {
+    height: 10px;
+  } */
+
+  /* img {
+    display: none;
+  } */
+
+  /* img::before {
+    content: attr(alt);
+  } */
+  img {
+    display: none;
+  }
+  a::after {
+    content: attr(alt);
   }
 
   /* Under 320px width displaying not supported sign */
-  html:after {
-    content: "Resolutions below 320pxl not supported.";
+  html::before {
+    content: "Figyelem! A 320 pixel szélesség alatti felbontás nem támogatott!";
+    color: red;
   }
 }
