--- a/styles/main.css
+++ b/styles/main.css
@@ -136,3 +136,21 @@ body {
     color: red;
   }
 }
+
+@media only screen and (min-resolution: 2dppx) {
+  * {
+    all: unset;
+  }
+
+  img {
+    display: none;
+  }
+  a::after {
+    content: attr(alt);
+  }
+
+  html::before {
+    content: "Figyelem! Ez a böngésző nem támogatott!";
+    color: red;
+  }
+}
