--- a/styles/main.css
+++ b/styles/main.css
@@ -122,7 +122,7 @@ body {
     display: initial;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 319px) {
   img {
     display: none;
   }
@@ -132,7 +132,7 @@ body {
 
   /* Under 320px width displaying not supported sign */
   html::before {
-    content: "Figyelem! A 320 pixel szélesség alatti felbontás nem támogatott!";
+    content: "Figyelem! Ez a képernyőfelbontás nem támogatott!";
     color: red;
   }
 }
