--- a/styles/main.css
+++ b/styles/main.css
@@ -163,7 +163,8 @@ body {
 
 .hero__image {
   position: absolute;
-  width: 105rem;
+  width: calc(300vw * 0.5);
+  max-width: 105rem;
   bottom: 0;
   right: -35rem;
 }
@@ -181,6 +182,43 @@ body {
 
   .show-720 {
     display: initial;
+  }
+
+  h1 {
+    font-size: 3rem;
+    line-height: 4rem;
+    letter-spacing: -0.015em;
+  }
+
+  .hero__content {
+    flex-wrap: wrap-reverse;
+    height: 90vh;
+    min-height: 52rem;
+  }
+
+  .hero__body {
+    height: 45vh;
+    min-height: 26rem;
+  }
+
+  .hero__image-container {
+    display: flex;
+    height: 45vh;
+    position: unset;
+    overflow: visible;
+    justify-content: flex-end;
+    min-height: 26rem;
+  }
+
+  .hero__image {
+    position: unset;
+    max-width: 100vw;
+    object-fit: cover;
+    /* min-height: 26rem; */
+  }
+
+  .hero__title {
+    width: 80vw;
   }
 }
 @media screen and (max-width: 319px) {
