--- a/styles/main.css
+++ b/styles/main.css
@@ -44,6 +44,25 @@ h1 {
   color: var(--font-color-purple);
 }
 
+h2 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.7rem;
+  line-height: 3rem;
+  letter-spacing: -0.015em;
+  color: var(--font-color-magenta);
+}
+
+p {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  letter-spacing: -0.015em;
+  color: var(--font-color-purple);
+}
 /* Lyout */
 
 body {
@@ -91,9 +110,10 @@ body {
 }
 
 .container-pos {
-  margin: 0.5rem;
+  margin: 0.5rem 0.5rem 0 0.5rem;
   border-radius: 1.7rem;
   padding-right: 1rem;
+  border: 1px solid rgba(230, 0, 123, 0.1);
 }
 
 .button {
@@ -143,8 +163,8 @@ body {
   min-height: 30rem;
   height: 50vh;
   max-height: 98.8rem;
-  margin: 0.5rem;
   overflow: hidden;
+  background-color: var(--font-color-bight);
 }
 
 .hero__body {
@@ -169,27 +189,7 @@ body {
   right: -35rem;
 }
 
-.hero__title {
-}
-
-/* Breakpoints */
-
 @media screen and (max-width: 720px) {
-  /* Utility breakpoints */
-  .hide-720 {
-    display: none;
-  }
-
-  .show-720 {
-    display: initial;
-  }
-
-  h1 {
-    font-size: 3rem;
-    line-height: 4rem;
-    letter-spacing: -0.015em;
-  }
-
   .hero__content {
     flex-wrap: wrap-reverse;
     height: 90vh;
@@ -214,13 +214,78 @@ body {
     position: unset;
     max-width: 100vw;
     object-fit: cover;
-    /* min-height: 26rem; */
   }
 
   .hero__title {
     width: 80vw;
   }
 }
+
+/* Media component */
+
+.media {
+}
+
+.media_content {
+  margin-top: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  min-height: 30rem;
+  height: 25vh;
+  overflow: hidden;
+  padding: 5rem;
+  background-color: var(--font-color-bight);
+}
+
+.media__image-container {
+  box-sizing: border-box;
+  flex-basis: 60vw;
+  overflow: hidden;
+  padding: 0 5rem;
+  border-radius: 0 1.7rem 1.7rem 0;
+}
+
+.media__image {
+  height: 100%;
+  object-fit: cover;
+}
+
+.media__body {
+  box-sizing: border-box;
+  flex-basis: 60vw;
+  align-self: center;
+  padding: 0 5rem 0 0;
+  border-radius: 1.7rem 0 0 1.7rem;
+}
+
+.media__title {
+}
+
+.media__text {
+}
+
+/* Breakpoints */
+
+@media screen and (max-width: 720px) {
+  /* Breakpoint common base modifyers */
+
+  h1 {
+    font-size: 3rem;
+    line-height: 4rem;
+    letter-spacing: -0.015em;
+  }
+
+  /* Utility breakpoints */
+
+  .hide-720 {
+    display: none;
+  }
+
+  .show-720 {
+    display: initial;
+  }
+}
+
 @media screen and (max-width: 319px) {
   img {
     display: none;
