--- a/styles/main.css
+++ b/styles/main.css
@@ -223,10 +223,7 @@ body {
 
 /* Media component */
 
-.media {
-}
-
-.media_content {
+.media__content {
   margin-top: 0;
   display: flex;
   flex-direction: row-reverse;
@@ -258,10 +255,34 @@ body {
   border-radius: 1.7rem 0 0 1.7rem;
 }
 
-.media__title {
-}
+@media screen and (max-width: 720px) {
+  .media__content {
+    flex-wrap: wrap-reverse;
+    height: 90vh;
+    min-height: 52rem;
+    padding: 3rem 2rem;
+  }
 
-.media__text {
+  .media__body {
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+    flex-basis: 100vw;
+    padding: 2rem 0;
+    border-radius: 1.7rem 1.7rem 0 0;
+    height: 45vh;
+  }
+
+  .media__image-container {
+    flex-basis: 100vw;
+    padding: 0;
+    border-radius: 0 0 1.7rem 1.7rem;
+    height: 45vh;
+  }
+
+  .media__image {
+    width: 100%;
+  }
 }
 
 /* Breakpoints */
