--- a/styles/main.css
+++ b/styles/main.css
@@ -57,8 +57,8 @@ h2 {
 p {
   font-family: Montserrat;
   font-style: normal;
-  font-weight: 500;
-  font-size: 1.2rem;
+  font-weight: 600;
+  font-size: 1.4rem;
   line-height: 2rem;
   letter-spacing: -0.015em;
   color: var(--font-color-purple);
@@ -138,7 +138,7 @@ body {
 .nav-list {
   height: 6rem;
   color: var(--font-color-bight);
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 500;
   display: flex;
   gap: 2rem;
@@ -258,30 +258,33 @@ body {
 @media screen and (max-width: 720px) {
   .media__content {
     flex-wrap: wrap-reverse;
-    height: 90vh;
     min-height: 52rem;
     padding: 3rem 2rem;
+    height: min-content;
   }
 
   .media__body {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
     flex-basis: 100vw;
-    padding: 2rem 0;
     border-radius: 1.7rem 1.7rem 0 0;
-    height: 45vh;
+    min-height: 26rem;
+    width: 100%;
+    padding-bottom: 2rem;
   }
 
   .media__image-container {
     flex-basis: 100vw;
     padding: 0;
     border-radius: 0 0 1.7rem 1.7rem;
-    height: 45vh;
+    height: 26rem;
   }
 
   .media__image {
     width: 100%;
+  }
+
+  .media__title,
+  .media__text {
+    width: 85vw;
   }
 }
 
