--- a/styles/main.css
+++ b/styles/main.css
@@ -135,8 +135,9 @@ body {
 /* Floating Button */
 @media screen and (max-width: 720px) {
   .line {
-    height: 1;
+    height: 1px;
     width: 20px;
+    background-color: white;
     border: 1px solid white;
   }
 
@@ -149,13 +150,14 @@ body {
     gap: 4px;
     position: fixed;
     bottom: 5rem;
-    left: 5rem;
-    width: 5rem;
-    height: 5rem;
-    border-radius: 100%;
+    right: 5rem;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
     background-blend-mode: multiply;
-    background-color: rgba(255, 0, 221, 0.493);
+    background-color: var(--font-color-magenta);
     transition: 3s;
+    overflow: hidden;
   }
 }
 /* Nav component */
