--- a/styles/main.css
+++ b/styles/main.css
@@ -189,7 +189,7 @@ body {
   overflow: hidden;
   opacity: 0;
 }
-/* } */
+
 /* Nav component */
 
 .nav-list {
@@ -295,13 +295,15 @@ body {
   box-sizing: border-box;
   flex-basis: 60vw;
   overflow: hidden;
-  padding: 0 5rem;
+  padding: 0 0rem;
   border-radius: 0 1.7rem 1.7rem 0;
 }
 
 .media__image {
+  width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center bottom;
 }
 
 .media__body {
@@ -379,6 +381,7 @@ body {
 }
 
 .media2__image-container {
+  flex-basis: 60vw;
   box-sizing: border-box;
   flex-grow: 0;
   overflow: hidden;
@@ -409,6 +412,7 @@ body {
 .media2__text {
   padding-left: 2rem;
   padding-right: 1rem;
+  min-width: 30rem;
 }
 
 @media screen and (max-width: 720px) {
@@ -432,7 +436,7 @@ body {
     flex-basis: 100vw;
     padding: 0;
     border-radius: 0 0 1.7rem 1.7rem;
-    height: 26rem;
+    min-height: 26rem;
   }
 
   .media2__image {
@@ -441,7 +445,7 @@ body {
 
   .media2__title,
   .media2__text {
-    width: 75vw;
+    min-width: unset;
   }
 }
 
@@ -462,6 +466,7 @@ body {
 
 .media2__footer-body {
   display: flex;
+  max-width: 15rem;
   flex-direction: column;
   align-items: center;
   padding: 2rem 4rem;
@@ -470,6 +475,7 @@ body {
 
 .media2__footer-text {
   padding: 1rem 0;
+  width: 15rem;
   text-align: center;
 }
 
